deps/crates/vendor/seq-macro/tests/ui/kind-mismatch.stderr
error: expected character literal
 --> tests/ui/kind-mismatch.rs:3:16
  |
3 | seq!(N in 'a'..b'z' {});
  |                ^^^^
