deps/crates/vendor/seq-macro/tests/ui/kind-mismatch.rs
use seq_macro::seq;

seq!(N in 'a'..b'z' {});

fn main() {}
